[HERCULES-9675] - I18n título de Notificación Proyecto Externo CVN