@@ -2,7 +2,6 @@ package org.crue.hercules.sgi.csp.service;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.crue.hercules.sgi.csp.dto.com.CspComRecepcionNotificacionesCVNProyectoExtData;
 import org.crue.hercules.sgi.csp.dto.com.EmailOutput;
@@ -12,6 +11,7 @@ import org.crue.hercules.sgi.csp.model.NotificacionProyectoExternoCVN;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiCnfService;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiComService;
 import org.crue.hercules.sgi.csp.service.sgi.SgiApiSgpService;
+import org.crue.hercules.sgi.framework.i18n.I18nHelper;
 import org.springframework.stereotype.Service;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -34,7 +34,7 @@ public class NotificacionProyectoExternoCVNComService {
     CspComRecepcionNotificacionesCVNProyectoExtData data = CspComRecepcionNotificacionesCVNProyectoExtData.builder()
         .nombreApellidosCreador(getNombreApellidosSolicitante(notificacion.getSolicitanteRef()))
         .fechaCreacion(notificacion.getCreationDate() == null ? Instant.now() : notificacion.getCreationDate())
-        .tituloProyecto(notificacion.getTitulo())
+        .tituloProyecto(I18nHelper.getFieldValue(notificacion.getTitulo()))
         .build();
 
     try {
@@ -61,7 +61,7 @@ public class NotificacionProyectoExternoCVNComService {
     return destinatarios.stream()
         .map(destinatario -> Recipient.builder().name(destinatario).address(destinatario)
             .build())
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
